Update privacy page

--- a/i18n/messages/en.json
+++ b/i18n/messages/en.json
@@ -102,5 +102,40 @@
   "Footer": {
     "p1": "Privacy",
     "p2": "Legal Notice"
+  },
+  "Privacy": {
+    "header": "Privacy",
+    "date1": "Effective Date:",
+    "date2": "December 1, 2024",
+    "introTitle": "Introduction",
+    "introWelcome": "Welcome to ",
+    "introBody": "Your privacy is important to us. This Privacy Policy explains how we collect, use, disclose, and safeguard your information when you visit our website. Please read this policy carefully to understand our practices regarding your personal data and how we handle it.",
+    "infoTitle": "Information We Collect",
+    "personalTitle": "Personal Information",
+    "personalBody": "We do not collect personal information unless you choose to contact us. If you send us an email, we may collect the following information:",
+    "personalList1": "Your email address",
+    "personalList2": "Any other details you include in your email",
+    "nonPersonalTitle": "Non-Personal Information",
+    "nonPersonalBody": "We do not automatically collect non-personal information such as IP addresses, browser details, or usage data.",
+    "usageTitle": "How We Use Your Information",
+    "usageBody": "If you contact us via email, we use the information you provide solely to:",
+    "usageList1": "Respond to your inquiries.",
+    "usageList2": "Provide any requested assistance or information.",
+    "usageNote": "We do not use your information for marketing purposes or share it with third parties.",
+    "sharingTitle": "Sharing Your Information",
+    "sharingBody": "We do not sell, rent, or share your personal data with any third parties. Your information is used exclusively for responding to your inquiries.",
+    "cookiesTitle": "Cookies and Tracking Technologies",
+    "cookiesBody": "We do not use cookies or other tracking technologies on our website.",
+    "retentionTitle": "Data Retention",
+    "retentionBody": "We retain the information you provide in your emails only as long as necessary to respond to your inquiries. Once the information is no longer needed, it is securely deleted.",
+    "rightsTitle": "Your Rights",
+    "rightsBody": "You have the right to:",
+    "rightsList1": "Request access to any information you have provided to us.",
+    "rightsList2": "Request the deletion of your information from our records.",
+    "changesTitle": "Changes to This Privacy Policy",
+    "changesBody": "We may update this Privacy Policy from time to time. Any changes will be reflected on this page with an updated revision date.",
+    "contactTitle": "Contact Us",
+    "contactBody": "If you have any questions or concerns about this Privacy Policy or our practices, please contact us at:",
+    "contactEmail": "fvukelic@proton.me"
   }
 }
