--- a/i18n/messages/en.json
+++ b/i18n/messages/en.json
@@ -140,7 +140,7 @@
     "contactEmail": "fvukelic@proton.me"
   },
   "LegalNotice": {
-    "header": "Legal Notice",
+    "header": "Legal\u00A0Notice",
     "responsibleTitle": "Responsible for the Website",
     "companyName": "Company Name:",
     "legalForm1": "Legal Form:",
