--- a/i18n/messages/fr.json
+++ b/i18n/messages/fr.json
@@ -140,7 +140,7 @@
     "contactEmail": "fvukelic@proton.me"
   },
   "LegalNotice": {
-    "header": "Mentions\u00A0Légales",
+    "header": "Mentions Légales",
     "responsibleTitle": "Responsable du Site",
     "companyName": "Raison sociale :",
     "legalForm1": "Forme juridique :",
