Update typo size

--- a/i18n/messages/fr.json
+++ b/i18n/messages/fr.json
@@ -101,7 +101,7 @@
   },
   "Footer": {
     "copyright": "©2024 Tous droits réservés.",
-    "privacy": "Confidentialité",
+    "privacy": "Vie Privée",
     "legalNotice": "Mentions Légales"
   },
   "Privacy": {
