--- a/i18n/messages/en.json
+++ b/i18n/messages/en.json
@@ -49,8 +49,8 @@
   },
   "Experience": {
     "section": "Experience",
-    "exp1": "Freelance",
-    "role1": "Web Developer",
+    "exp1": "Web Developer",
+    "role1": "Freelance",
     "date1": "Since 2021",
     "loca1": "Remote",
     "desc1": "I develop custom websites for individuals and small businesses, delivering responsive, user-friendly, and tailored designs. My responsibilities include optimizing site performance, enhancing search engine optimization (SEO) for better search visibility, and providing copyrighting services for unique, legally compliant content. Additionally, I offer logo design and social media assistance to improve brand presence and engage clients across different industries."
