--- a/i18n/messages/fr.json
+++ b/i18n/messages/fr.json
@@ -49,12 +49,20 @@
   },
   "Experience": {
     "section": "Experience",
+
     "exp1": "Développeur Web",
     "role1": "Freelance",
     "date1": "Depuis 2021",
     "loca1": "Remote",
-    "desc1": "Je développe des sites web personnalisés pour les particuliers et les petites entreprises, en offrant des designs responsives, conviviaux et sur mesure. Mes responsabilités incluent l'optimisation des performances du site, l'amélioration du référencement naturel (SEO) pour une meilleure visibilité sur les moteurs de recherche, ainsi que la création de contenus originaux et conformes aux droits d'auteur. De plus, je propose des services de design de logo et d’assistance sur les réseaux sociaux pour renforcer la présence de la marque et engager les clients dans différents secteurs."
+    "desc1": "Je développe des sites web personnalisés pour les particuliers et les petites entreprises, en offrant des designs responsives, conviviaux et sur mesure. Mes responsabilités incluent l'optimisation des performances du site, l'amélioration du référencement naturel (SEO) pour une meilleure visibilité sur les moteurs de recherche, ainsi que la création de contenus originaux et conformes aux droits d'auteur. De plus, je propose des services de design de logo et d’assistance sur les réseaux sociaux pour renforcer la présence de la marque et engager les clients dans différents secteurs.",
+
+    "exp2": "AI Prompt Engineer",
+    "role2": "Outlier AI",
+    "date2": "Nov 2024 - Présent",
+    "loca2": "Remote",
+    "desc2": "Je crée des prompts efficaces pour les modèles d'IA, en optimisant leurs performances et en assurant leur précision. Mes responsabilités incluent la surveillance et l'ajustement des prompts en fonction des données de performance, la révision et l'évaluation des réponses générées par l'IA pour en garantir la qualité et la pertinence, la réalisation de tests utilisateurs et l'intégration des retours pour une amélioration continue. J'analyse également les cas limites et développe des solutions, adapte les prompts à divers cas d'usage et documente les meilleures pratiques pour l'écriture de prompts, afin d'assurer des réponses de haute qualité et précises."
   },
+
   "Certification": {
     "section": "Certification",
     "certificate": "Certificat",
