--- a/i18n/messages/en.json
+++ b/i18n/messages/en.json
@@ -56,7 +56,7 @@
     "loca1": "Remote",
     "desc1": "I develop custom websites for individuals and small businesses, delivering responsive, user-friendly, and tailored designs. My responsibilities include optimizing site performance, enhancing search engine optimization (SEO) for better search visibility, and providing copyrighting services for unique, legally compliant content. Additionally, I offer logo design and social media assistance to improve brand presence and engage clients across different industries.",
 
-    "exp2": "AI Prompt Engineer",
+    "exp2": "AI Trainer/Reviewer",
     "role2": "Outlier AI",
     "date2": "Since 2024",
     "loca2": "Remote",
