--- a/i18n/messages/fr.json
+++ b/i18n/messages/fr.json
@@ -56,7 +56,7 @@
     "loca1": "Remote",
     "desc1": "Je développe des sites web personnalisés pour les particuliers et les petites entreprises, en offrant des designs responsives, conviviaux et sur mesure. Mes responsabilités incluent l'optimisation des performances du site, l'amélioration du référencement naturel (SEO) pour une meilleure visibilité sur les moteurs de recherche, ainsi que la création de contenus originaux et conformes aux droits d'auteur. De plus, je propose des services de design de logo et d’assistance sur les réseaux sociaux pour renforcer la présence de la marque et engager les clients dans différents secteurs.",
 
-    "exp2": "AI Prompt Engineer",
+    "exp2": "AI Trainer/Reviewer",
     "role2": "Outlier AI",
     "date2": "Nov 2024 - Présent",
     "loca2": "Remote",
