Update Footer date

--- a/i18n/messages/en.json
+++ b/i18n/messages/en.json
@@ -108,7 +108,7 @@
     "p3": "Set up a meeting"
   },
   "Footer": {
-    "copyright": "©2024 All rights reserved.",
+    "copyright": "All rights reserved.",
     "privacy": "Privacy",
     "legalNotice": "Legal Notice"
   },
