--- a/i18n/messages/fr.json
+++ b/i18n/messages/fr.json
@@ -108,7 +108,7 @@
     "p3": "Rendez-vous"
   },
   "Footer": {
-    "copyright": "©2024 Tous droits réservés.",
+    "copyright": "Tous droits réservés.",
     "privacy": "Confidentialité",
     "legalNotice": "Mentions Légales"
   },
